GetMapping fixed in recipecontroller