@@ -19,8 +19,9 @@ public class RecipeController {
 
     @RequestMapping("/recipe/show/{id}")
     public String showById(@PathVariable String id, Model model){
-        //log.debug("Getting to show a recipe");
-        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
+
+        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+
         return "recipe/show";
     }
 }
